# personal-website

./: .gitignore  CLAUDE.md  CNAME  contact.html  index.html  new  remy-future-enhancements-backup.html  robots.txt  script.js  script.js.backup  script.js.original  sitemap.xml  style.css
.java_linear_algebra/docs/: :Matrix2d.org  Matrix2d.org  MatrixXd.org
.java_linear_algebra/src/: README.md
.rust-6502/src/: cpu (syn-2603-7000-8000-1b20-0000-0000-0000-10ed.res6.spectrum.com's conflicted copy 2025-02-08).rs  cpu.rs  debugger.rs  example.asm  loader.rs  main.rs  memory.rs  op_code.rs
.rust-6502/tests/: op_code_tests.rs
.sudoku-wasm/: package.json  preview.html  sudoku_bg.wasm.d.ts
chess_project/: .CMakeLists.txt.swp  .swp  CMakeLists.txt  board.cpp  board.h  chessLogic.cpp  chessLogic.h  main.cpp  move.cpp  move.h  swap.sh  window.cpp  window.h
details/contact/: contact-info.html
details/dotfiles/: arch-setup.html  emacs-config.html  emacs.html  hyprland.html  nix-config.html  shell-environment.html  sway-waybar.html
details/projects/: 6502-emulator.html  chessdl.html  huffman.html  java-linear-algebra-v2.html  java-linear-algebra.html  linear-algebra.html  mandelbrot.html  (+5 more)
huffman-compression/: huffman-compression.cpp
images/: hyprland-config.png.bak  mandelbrot-icon.png.bak  nix-config.png.bak
linear-algebra/: README.md
neural-network/: ActivationFunctions.java  DataReader.java  NeuralNetwork.java
pages/: contact.html
script/: contact.js  dotfiles.js  master.js  projects.js  work.js
sudoku-wasm/: index.html  sudoku.d.ts  sudoku.js
(+11 files in other folders)
